
2012-01-04  ChunEon Park <hermet@hermet.pe.kr>

        * Deprecate elm_label_slide_set()/get() and added elm_label_slide_mode_set()/get() instead and elm_label_slide_go().

2012-01-05  ChunEon Park <hermet@hermet.pe.kr>

        * Added a label signal callback "slide,end"

2013-01-06  Jaehyun Cho <jae_hyun_cho@naver.com>

        * Fix omitting signal emission when customized text parts change the text.

2013-01-10  Cedric Bail

        * Don't link anymore with E_DBus at build time.

2013-01-13  Daniel Juyung Seo (SeoZ)

        * Added "highlighted" and "unhighlighted" signals to list, genlist, and gengrid.

2013-01-16  Shilpa Singh <shilpa.singh@samsung.com>, Rajeev Ranjan <rajeev.r@samsung.com>

        * Fix "changed" signal being sent twice in case of toggle style when check is clicked.

2013-01-16  WooHyun Jung

        * elm_plug should call elm_widget_can_focus_set after adding parent class.
        * Now, widget itself is the object which gets mouse_up event for stealing focus from another object. By this change, a widget with scroller interface can change its focus state before mouse_up of hit_rect.

2013-01-16  Jaeun Choi

        * Fix bug where index is not re-filled if autohide disabled

2013-01-16  ChunEon Park (Hermet)

        * allocate conformant part dummy objects only when the swallow parts are existed actually. since these parts are really dependent on the platform, in most case they don't need all parts at the same time.

2013-01-16  Daniel Juyung Seo (SeoZ)

        * Fix thumb theme hook.

2013-01-17  Bora Hwang (bora1.hwang@samsung.com)

        * when parent of ctxpopup is resized, ctxpopup calls dismissed signal

2013-01-18  Thiep Ha (thiep.ha@samsung.com)

        * Fix memory leak of the ctxpopup and callback function to be a ctxpoup obj is delivered to.

2013-01-19  WooHyun Jung

        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.